@@ -1,20 +1,9 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.cluster.metadata;
@@ -30,13 +19,14 @@ import org.elasticsearch.client.IndicesAdminClient;
 import org.elasticsearch.cluster.ClusterChangedEvent;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.node.DiscoveryNode;
+import org.elasticsearch.cluster.node.DiscoveryNodeRole;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.bytes.BytesArray;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.collect.ImmutableOpenMap;
-import org.elasticsearch.common.collect.Tuple;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
+import org.elasticsearch.core.Tuple;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.threadpool.TestThreadPool;
 import org.elasticsearch.threadpool.ThreadPool;
@@ -46,7 +36,6 @@ import org.junit.Before;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -69,11 +58,10 @@ import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.notNullValue;
-import static org.mockito.Matchers.any;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
-
 
 public class TemplateUpgradeServiceTests extends ESTestCase {
 
@@ -98,42 +86,45 @@ public class TemplateUpgradeServiceTests extends ESTestCase {
         boolean shouldRemove = randomBoolean();
         boolean shouldChange = randomBoolean();
 
-        MetaData metaData = randomMetaData(
-            IndexTemplateMetaData.builder("user_template").patterns(randomIndexPatterns()).build(),
-            IndexTemplateMetaData.builder("removed_test_template").patterns(randomIndexPatterns()).build(),
-            IndexTemplateMetaData.builder("changed_test_template").patterns(randomIndexPatterns()).build()
+        Metadata metadata = randomMetadata(
+            IndexTemplateMetadata.builder("user_template").patterns(randomIndexPatterns()).build(),
+            IndexTemplateMetadata.builder("removed_test_template").patterns(randomIndexPatterns()).build(),
+            IndexTemplateMetadata.builder("changed_test_template").patterns(randomIndexPatterns()).build()
         );
 
-        final TemplateUpgradeService service = new TemplateUpgradeService(null, clusterService, threadPool,
-            Arrays.asList(
-                templates -> {
-                    if (shouldAdd) {
-                        assertNull(templates.put("added_test_template",
-                            IndexTemplateMetaData.builder("added_test_template").patterns(randomIndexPatterns()).build()));
-                    }
-                    return templates;
-                },
-                templates -> {
-                    if (shouldRemove) {
-                        assertNotNull(templates.remove("removed_test_template"));
-                    }
-                    return templates;
-                },
-                templates -> {
-                    if (shouldChange) {
-                        assertNotNull(templates.put("changed_test_template",
-                            IndexTemplateMetaData.builder("changed_test_template").patterns(randomIndexPatterns()).order(10).build()));
-                    }
-                    return templates;
-                }
-            ));
+        final TemplateUpgradeService service = new TemplateUpgradeService(null, clusterService, threadPool, Arrays.asList(templates -> {
+            if (shouldAdd) {
+                assertNull(
+                    templates.put(
+                        "added_test_template",
+                        IndexTemplateMetadata.builder("added_test_template").patterns(randomIndexPatterns()).build()
+                    )
+                );
+            }
+            return templates;
+        }, templates -> {
+            if (shouldRemove) {
+                assertNotNull(templates.remove("removed_test_template"));
+            }
+            return templates;
+        }, templates -> {
+            if (shouldChange) {
+                assertNotNull(
+                    templates.put(
+                        "changed_test_template",
+                        IndexTemplateMetadata.builder("changed_test_template").patterns(randomIndexPatterns()).order(10).build()
+                    )
+                );
+            }
+            return templates;
+        }));
 
-        Optional<Tuple<Map<String, BytesReference>, Set<String>>> optChanges =
-            service.calculateTemplateChanges(metaData.templates());
+        Optional<Tuple<Map<String, BytesReference>, Set<String>>> optChanges = service.calculateTemplateChanges(metadata.templates());
 
         if (shouldAdd || shouldRemove || shouldChange) {
-            Tuple<Map<String, BytesReference>, Set<String>> changes = optChanges.orElseThrow(() ->
-                new AssertionError("Should have non empty changes"));
+            Tuple<Map<String, BytesReference>, Set<String>> changes = optChanges.orElseThrow(
+                () -> new AssertionError("Should have non empty changes")
+            );
             if (shouldAdd) {
                 assertThat(changes.v1().get("added_test_template"), notNullValue());
                 if (shouldChange) {
@@ -161,7 +152,6 @@ public class TemplateUpgradeServiceTests extends ESTestCase {
             assertThat(optChanges.isPresent(), equalTo(false));
         }
     }
-
 
     @SuppressWarnings("unchecked")
     public void testUpdateTemplates() {
@@ -204,8 +194,7 @@ public class TemplateUpgradeServiceTests extends ESTestCase {
             additions.put("add_template_" + i, new BytesArray("{\"index_patterns\" : \"*\", \"order\" : " + i + "}"));
         }
 
-        final TemplateUpgradeService service = new TemplateUpgradeService(mockClient, clusterService, threadPool,
-            Collections.emptyList());
+        final TemplateUpgradeService service = new TemplateUpgradeService(mockClient, clusterService, threadPool, Collections.emptyList());
 
         IllegalStateException ise = expectThrows(IllegalStateException.class, () -> service.upgradeTemplates(additions, deletions));
         assertThat(ise.getMessage(), containsString("template upgrade service should always happen in a system context"));
@@ -224,9 +213,7 @@ public class TemplateUpgradeServiceTests extends ESTestCase {
             if (randomBoolean()) {
                 putTemplateListeners.get(i).onFailure(new RuntimeException("test - ignore"));
             } else {
-                putTemplateListeners.get(i).onResponse(new AcknowledgedResponse(randomBoolean()) {
-
-                });
+                putTemplateListeners.get(i).onResponse(AcknowledgedResponse.of(randomBoolean()));
             }
         }
 
@@ -237,9 +224,7 @@ public class TemplateUpgradeServiceTests extends ESTestCase {
                 assertThat(prevUpdatesInProgress - service.upgradesInProgress.get(), equalTo(1));
             } else {
                 int prevUpdatesInProgress = service.upgradesInProgress.get();
-                deleteTemplateListeners.get(i).onResponse(new AcknowledgedResponse(randomBoolean()) {
-
-                });
+                deleteTemplateListeners.get(i).onResponse(AcknowledgedResponse.of(randomBoolean()));
                 assertThat(prevUpdatesInProgress - service.upgradesInProgress.get(), equalTo(1));
             }
         }
@@ -247,8 +232,7 @@ public class TemplateUpgradeServiceTests extends ESTestCase {
         assertThat(service.upgradesInProgress.get(), equalTo(2));
     }
 
-    private static final Set<DiscoveryNode.Role> MASTER_DATA_ROLES =
-        Collections.unmodifiableSet(EnumSet.of(DiscoveryNode.Role.MASTER, DiscoveryNode.Role.DATA));
+    private static final Set<DiscoveryNodeRole> MASTER_DATA_ROLES = Set.of(DiscoveryNodeRole.MASTER_ROLE, DiscoveryNodeRole.DATA_ROLE);
 
     @SuppressWarnings("unchecked")
     public void testClusterStateUpdate() throws InterruptedException {
@@ -261,10 +245,10 @@ public class TemplateUpgradeServiceTests extends ESTestCase {
         final Semaphore changedInvocation = new Semaphore(0);
         final Semaphore finishInvocation = new Semaphore(0);
 
-        MetaData metaData = randomMetaData(
-            IndexTemplateMetaData.builder("user_template").patterns(randomIndexPatterns()).build(),
-            IndexTemplateMetaData.builder("removed_test_template").patterns(randomIndexPatterns()).build(),
-            IndexTemplateMetaData.builder("changed_test_template").patterns(randomIndexPatterns()).build()
+        Metadata metadata = randomMetadata(
+            IndexTemplateMetadata.builder("user_template").patterns(randomIndexPatterns()).build(),
+            IndexTemplateMetadata.builder("removed_test_template").patterns(randomIndexPatterns()).build(),
+            IndexTemplateMetadata.builder("changed_test_template").patterns(randomIndexPatterns()).build()
         );
 
         Client mockClient = mock(Client.class);
@@ -296,23 +280,26 @@ public class TemplateUpgradeServiceTests extends ESTestCase {
             return null;
         }).when(mockIndicesAdminClient).deleteTemplate(any(DeleteIndexTemplateRequest.class), any(ActionListener.class));
 
-        new TemplateUpgradeService(mockClient, clusterService, threadPool,
-            Arrays.asList(
-                templates -> {
-                    assertNull(templates.put("added_test_template", IndexTemplateMetaData.builder("added_test_template")
-                        .patterns(Collections.singletonList("*")).build()));
-                    return templates;
-                },
-                templates -> {
-                    assertNotNull(templates.remove("removed_test_template"));
-                    return templates;
-                },
-                templates -> {
-                    assertNotNull(templates.put("changed_test_template", IndexTemplateMetaData.builder("changed_test_template")
-                        .patterns(Collections.singletonList("*")).order(10).build()));
-                    return templates;
-                }
-                )) {
+        new TemplateUpgradeService(mockClient, clusterService, threadPool, Arrays.asList(templates -> {
+            assertNull(
+                templates.put(
+                    "added_test_template",
+                    IndexTemplateMetadata.builder("added_test_template").patterns(Collections.singletonList("*")).build()
+                )
+            );
+            return templates;
+        }, templates -> {
+            assertNotNull(templates.remove("removed_test_template"));
+            return templates;
+        }, templates -> {
+            assertNotNull(
+                templates.put(
+                    "changed_test_template",
+                    IndexTemplateMetadata.builder("changed_test_template").patterns(Collections.singletonList("*")).order(10).build()
+                )
+            );
+            return templates;
+        })) {
 
             @Override
             void tryFinishUpgrade(AtomicBoolean anyUpgradeFailed) {
@@ -327,8 +314,9 @@ public class TemplateUpgradeServiceTests extends ESTestCase {
             }
 
             @Override
-            Optional<Tuple<Map<String, BytesReference>, Set<String>>>
-                    calculateTemplateChanges(ImmutableOpenMap<String, IndexTemplateMetaData> templates) {
+            Optional<Tuple<Map<String, BytesReference>, Set<String>>> calculateTemplateChanges(
+                ImmutableOpenMap<String, IndexTemplateMetadata> templates
+            ) {
                 final Optional<Tuple<Map<String, BytesReference>, Set<String>>> ans = super.calculateTemplateChanges(templates);
                 calculateInvocation.release();
                 return ans;
@@ -342,10 +330,18 @@ public class TemplateUpgradeServiceTests extends ESTestCase {
         };
 
         ClusterState prevState = ClusterState.EMPTY_STATE;
-        ClusterState state = ClusterState.builder(prevState).nodes(DiscoveryNodes.builder()
-            .add(new DiscoveryNode("node1", "node1", buildNewFakeTransportAddress(), emptyMap(), MASTER_DATA_ROLES, Version.CURRENT)
-            ).localNodeId("node1").masterNodeId("node1").build()
-        ).metaData(metaData).build();
+        ClusterState state = ClusterState.builder(prevState)
+            .nodes(
+                DiscoveryNodes.builder()
+                    .add(
+                        new DiscoveryNode("node1", "node1", buildNewFakeTransportAddress(), emptyMap(), MASTER_DATA_ROLES, Version.CURRENT)
+                    )
+                    .localNodeId("node1")
+                    .masterNodeId("node1")
+                    .build()
+            )
+            .metadata(metadata)
+            .build();
         setState(clusterService, state);
 
         changedInvocation.acquire();
@@ -360,7 +356,7 @@ public class TemplateUpgradeServiceTests extends ESTestCase {
         assertThat(removedListener.get(), notNullValue());
 
         prevState = state;
-        state = ClusterState.builder(prevState).metaData(MetaData.builder(state.metaData()).removeTemplate("user_template")).build();
+        state = ClusterState.builder(prevState).metadata(Metadata.builder(state.metadata()).removeTemplate("user_template")).build();
         setState(clusterService, state);
 
         // Make sure that update wasn't invoked since we are still running
@@ -370,12 +366,9 @@ public class TemplateUpgradeServiceTests extends ESTestCase {
         assertThat(updateInvocation.availablePermits(), equalTo(0));
         assertThat(finishInvocation.availablePermits(), equalTo(0));
 
-        addedListener.getAndSet(null).onResponse(new AcknowledgedResponse(true) {
-        });
-        changedListener.getAndSet(null).onResponse(new AcknowledgedResponse(true) {
-        });
-        removedListener.getAndSet(null).onResponse(new AcknowledgedResponse(true) {
-        });
+        addedListener.getAndSet(null).onResponse(AcknowledgedResponse.TRUE);
+        changedListener.getAndSet(null).onResponse(AcknowledgedResponse.TRUE);
+        removedListener.getAndSet(null).onResponse(AcknowledgedResponse.TRUE);
 
         // 3 upgrades should be completed, in addition to the final calculate
         finishInvocation.acquire(3);
@@ -413,14 +406,14 @@ public class TemplateUpgradeServiceTests extends ESTestCase {
         assertThat(finishInvocation.availablePermits(), equalTo(0));
     }
 
-    public static MetaData randomMetaData(IndexTemplateMetaData... templates) {
-        MetaData.Builder builder = MetaData.builder();
-        for (IndexTemplateMetaData template : templates) {
+    public static Metadata randomMetadata(IndexTemplateMetadata... templates) {
+        Metadata.Builder builder = Metadata.builder();
+        for (IndexTemplateMetadata template : templates) {
             builder.put(template);
         }
         for (int i = 0; i < randomIntBetween(1, 5); i++) {
             builder.put(
-                IndexMetaData.builder(randomAlphaOfLength(10))
+                IndexMetadata.builder(randomAlphaOfLength(10))
                     .settings(settings(Version.CURRENT))
                     .numberOfReplicas(randomIntBetween(0, 3))
                     .numberOfShards(randomIntBetween(1, 5))
@@ -430,8 +423,6 @@ public class TemplateUpgradeServiceTests extends ESTestCase {
     }
 
     List<String> randomIndexPatterns() {
-        return IntStream.range(0, between(1, 10))
-            .mapToObj(n -> randomUnicodeOfCodepointLengthBetween(1, 100))
-            .collect(Collectors.toList());
+        return IntStream.range(0, between(1, 10)).mapToObj(n -> randomUnicodeOfCodepointLengthBetween(1, 100)).collect(Collectors.toList());
     }
 }
