@@ -1,7 +1,8 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 
 package org.elasticsearch.xpack.security.authc.kerberos;
@@ -11,8 +12,8 @@ import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.cache.Cache;
 import org.elasticsearch.common.cache.CacheBuilder;
-import org.elasticsearch.common.unit.TimeValue;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.license.XPackLicenseState;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.xpack.core.security.authc.AuthenticationResult;
@@ -20,19 +21,19 @@ import org.elasticsearch.xpack.core.security.authc.AuthenticationToken;
 import org.elasticsearch.xpack.core.security.authc.Realm;
 import org.elasticsearch.xpack.core.security.authc.RealmConfig;
 import org.elasticsearch.xpack.core.security.authc.kerberos.KerberosRealmSettings;
+import org.elasticsearch.xpack.core.security.authc.support.CachingRealm;
+import org.elasticsearch.xpack.core.security.authc.support.UserRoleMapper;
 import org.elasticsearch.xpack.core.security.user.User;
-import org.elasticsearch.xpack.security.authc.support.CachingRealm;
 import org.elasticsearch.xpack.security.authc.support.DelegatedAuthorizationSupport;
-import org.elasticsearch.xpack.security.authc.support.UserRoleMapper;
 import org.elasticsearch.xpack.security.authc.support.mapper.NativeRoleMappingStore;
 import org.ietf.jgss.GSSException;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import javax.security.auth.login.LoginException;
 
@@ -76,19 +77,24 @@ public final class KerberosRealm extends Realm implements CachingRealm {
     }
 
     // pkg scoped for testing
-    KerberosRealm(final RealmConfig config, final NativeRoleMappingStore nativeRoleMappingStore,
-            final KerberosTicketValidator kerberosTicketValidator, final ThreadPool threadPool,
-            final Cache<String, User> userPrincipalNameToUserCache) {
+    KerberosRealm(
+        final RealmConfig config,
+        final NativeRoleMappingStore nativeRoleMappingStore,
+        final KerberosTicketValidator kerberosTicketValidator,
+        final ThreadPool threadPool,
+        final Cache<String, User> userPrincipalNameToUserCache
+    ) {
         super(config);
         this.userRoleMapper = nativeRoleMappingStore;
         this.userRoleMapper.refreshRealmOnChange(this);
         final TimeValue ttl = config.getSetting(KerberosRealmSettings.CACHE_TTL_SETTING);
         if (ttl.getNanos() > 0) {
             this.userPrincipalNameToUserCache = (userPrincipalNameToUserCache == null)
-                    ? CacheBuilder.<String, User>builder()
-                            .setExpireAfterWrite(config.getSetting(KerberosRealmSettings.CACHE_TTL_SETTING))
-                            .setMaximumWeight(config.getSetting(KerberosRealmSettings.CACHE_MAX_USERS_SETTING)).build()
-                    : userPrincipalNameToUserCache;
+                ? CacheBuilder.<String, User>builder()
+                    .setExpireAfterWrite(config.getSetting(KerberosRealmSettings.CACHE_TTL_SETTING))
+                    .setMaximumWeight(config.getSetting(KerberosRealmSettings.CACHE_MAX_USERS_SETTING))
+                    .build()
+                : userPrincipalNameToUserCache;
         } else {
             this.userPrincipalNameToUserCache = null;
         }
@@ -149,52 +155,68 @@ public final class KerberosRealm extends Realm implements CachingRealm {
     }
 
     @Override
-    public void authenticate(final AuthenticationToken token, final ActionListener<AuthenticationResult> listener) {
+    public void authenticate(final AuthenticationToken token, final ActionListener<AuthenticationResult<User>> listener) {
         assert delegatedRealms != null : "Realm has not been initialized correctly";
         assert token instanceof KerberosAuthenticationToken;
         final KerberosAuthenticationToken kerbAuthnToken = (KerberosAuthenticationToken) token;
-        kerberosTicketValidator.validateTicket((byte[]) kerbAuthnToken.credentials(), keytabPath, enableKerberosDebug,
-                ActionListener.wrap(userPrincipalNameOutToken -> {
-                    if (userPrincipalNameOutToken.v1() != null) {
-                        resolveUser(userPrincipalNameOutToken.v1(), userPrincipalNameOutToken.v2(), listener);
-                    } else {
-                        /**
-                         * This is when security context could not be established may be due to ongoing
-                         * negotiation and requires token to be sent back to peer for continuing
-                         * further. We are terminating the authentication process as this is spengo
-                         * negotiation and no other realm can handle this. We can have only one Kerberos
-                         * realm in the system so terminating with RestStatus Unauthorized (401) and
-                         * with 'WWW-Authenticate' header populated with value with token in the form
-                         * 'Negotiate oYH1MIHyoAMK...'
-                         */
-                        String errorMessage = "failed to authenticate user, gss context negotiation not complete";
-                        ElasticsearchSecurityException ese = unauthorized(errorMessage, null);
-                        ese = unauthorizedWithOutputToken(ese, userPrincipalNameOutToken.v2());
-                        listener.onResponse(AuthenticationResult.terminate(errorMessage, ese));
-                    }
-                }, e -> handleException(e, listener)));
+        kerberosTicketValidator.validateTicket(
+            (byte[]) kerbAuthnToken.credentials(),
+            keytabPath,
+            enableKerberosDebug,
+            ActionListener.wrap(userPrincipalNameOutToken -> {
+                if (userPrincipalNameOutToken.v1() != null) {
+                    resolveUser(userPrincipalNameOutToken.v1(), userPrincipalNameOutToken.v2(), listener);
+                } else {
+                    /**
+                     * This is when security context could not be established may be due to ongoing
+                     * negotiation and requires token to be sent back to peer for continuing
+                     * further. We are terminating the authentication process as this is spengo
+                     * negotiation and no other realm can handle this. We can have only one Kerberos
+                     * realm in the system so terminating with RestStatus Unauthorized (401) and
+                     * with 'WWW-Authenticate' header populated with value with token in the form
+                     * 'Negotiate oYH1MIHyoAMK...'
+                     */
+                    String errorMessage = "failed to authenticate user, gss context negotiation not complete";
+                    ElasticsearchSecurityException ese = unauthorized(errorMessage, null);
+                    ese = unauthorizedWithOutputToken(ese, userPrincipalNameOutToken.v2());
+                    listener.onResponse(AuthenticationResult.terminate(errorMessage, ese));
+                }
+            }, e -> handleException(e, listener))
+        );
     }
 
     private String[] splitUserPrincipalName(final String userPrincipalName) {
         return userPrincipalName.split("@");
     }
 
-    private void handleException(Exception e, final ActionListener<AuthenticationResult> listener) {
+    private void handleException(Exception e, final ActionListener<AuthenticationResult<User>> listener) {
         if (e instanceof LoginException) {
             logger.debug("failed to authenticate user, service login failure", e);
-            listener.onResponse(AuthenticationResult.terminate("failed to authenticate user, service login failure",
-                    unauthorized(e.getLocalizedMessage(), e)));
+            listener.onResponse(
+                AuthenticationResult.terminate(
+                    "failed to authenticate user, service login failure",
+                    unauthorized(e.getLocalizedMessage(), e)
+                )
+            );
         } else if (e instanceof GSSException) {
             logger.debug("failed to authenticate user, gss context negotiation failure", e);
-            listener.onResponse(AuthenticationResult.terminate("failed to authenticate user, gss context negotiation failure",
-                    unauthorized(e.getLocalizedMessage(), e)));
+            listener.onResponse(
+                AuthenticationResult.terminate(
+                    "failed to authenticate user, gss context negotiation failure",
+                    unauthorized(e.getLocalizedMessage(), e)
+                )
+            );
         } else {
             logger.debug("failed to authenticate user", e);
             listener.onFailure(e);
         }
     }
 
-    private void resolveUser(final String userPrincipalName, final String outToken, final ActionListener<AuthenticationResult> listener) {
+    private void resolveUser(
+        final String userPrincipalName,
+        final String outToken,
+        final ActionListener<AuthenticationResult<User>> listener
+    ) {
         // if outToken is present then it needs to be communicated with peer, add it to
         // response header in thread context.
         if (Strings.hasText(outToken)) {
@@ -215,18 +237,21 @@ public final class KerberosRealm extends Realm implements CachingRealm {
             final User user = (userPrincipalNameToUserCache != null) ? userPrincipalNameToUserCache.get(username) : null;
             if (user != null) {
                 listener.onResponse(AuthenticationResult.success(user));
+            } else if (userAndRealmName.length > 1) {
+                final String realmName = userAndRealmName[1];
+                buildUser(username, Map.of(KRB_METADATA_REALM_NAME_KEY, realmName, KRB_METADATA_UPN_KEY, userPrincipalName), listener);
             } else {
-                final String realmName = (userAndRealmName.length > 1) ? userAndRealmName[1] : null;
-                final Map<String, Object> metadata = new HashMap<>();
-                metadata.put(KRB_METADATA_REALM_NAME_KEY, realmName);
-                metadata.put(KRB_METADATA_UPN_KEY, userPrincipalName);
-                buildUser(username, metadata, listener);
+                buildUser(username, Map.of(KRB_METADATA_UPN_KEY, userPrincipalName), listener);
             }
         }
     }
 
-    private void buildUser(final String username, final Map<String, Object> metadata, final ActionListener<AuthenticationResult> listener) {
-        final UserRoleMapper.UserData userData = new UserRoleMapper.UserData(username, null, Collections.emptySet(), metadata, this.config);
+    private void buildUser(
+        final String username,
+        final Map<String, Object> metadata,
+        final ActionListener<AuthenticationResult<User>> listener
+    ) {
+        final UserRoleMapper.UserData userData = new UserRoleMapper.UserData(username, null, Set.of(), metadata, this.config);
         userRoleMapper.resolveRoles(userData, ActionListener.wrap(roles -> {
             final User computedUser = new User(username, roles.toArray(new String[roles.size()]), null, null, userData.getMetadata(), true);
             if (userPrincipalNameToUserCache != null) {
