@@ -1,34 +1,35 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.security.authc.oidc;
 
 import com.nimbusds.jose.JWSAlgorithm;
 import com.nimbusds.jwt.JWT;
 import com.nimbusds.jwt.JWTClaimsSet;
-
 import com.nimbusds.oauth2.sdk.ParseException;
 import com.nimbusds.oauth2.sdk.ResponseType;
 import com.nimbusds.oauth2.sdk.Scope;
+import com.nimbusds.oauth2.sdk.auth.ClientAuthenticationMethod;
 import com.nimbusds.oauth2.sdk.id.ClientID;
 import com.nimbusds.oauth2.sdk.id.Issuer;
 import com.nimbusds.oauth2.sdk.id.State;
 import com.nimbusds.openid.connect.sdk.AuthenticationRequest;
 import com.nimbusds.openid.connect.sdk.LogoutRequest;
 import com.nimbusds.openid.connect.sdk.Nonce;
+
 import org.apache.logging.log4j.Logger;
 import org.elasticsearch.ElasticsearchSecurityException;
-
 import org.elasticsearch.action.ActionListener;
-import org.elasticsearch.common.Nullable;
 import org.elasticsearch.common.Strings;
-import org.elasticsearch.common.lease.Releasable;
 import org.elasticsearch.common.settings.SecureString;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.SettingsException;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
+import org.elasticsearch.core.Nullable;
+import org.elasticsearch.core.Releasable;
 import org.elasticsearch.license.XPackLicenseState;
 import org.elasticsearch.watcher.ResourceWatcherService;
 import org.elasticsearch.xpack.core.XPackSettings;
@@ -40,26 +41,23 @@ import org.elasticsearch.xpack.core.security.authc.Realm;
 import org.elasticsearch.xpack.core.security.authc.RealmConfig;
 import org.elasticsearch.xpack.core.security.authc.RealmSettings;
 import org.elasticsearch.xpack.core.security.authc.oidc.OpenIdConnectRealmSettings;
+import org.elasticsearch.xpack.core.security.authc.support.UserRoleMapper;
 import org.elasticsearch.xpack.core.security.user.User;
 import org.elasticsearch.xpack.core.ssl.SSLService;
 import org.elasticsearch.xpack.security.authc.TokenService;
 import org.elasticsearch.xpack.security.authc.support.DelegatedAuthorizationSupport;
-import org.elasticsearch.xpack.security.authc.support.UserRoleMapper;
 
 import java.net.URI;
 import java.net.URISyntaxException;
-
-import java.util.Collections;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Set;
 import java.util.function.Function;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-
 
 import static org.elasticsearch.xpack.core.security.authc.oidc.OpenIdConnectRealmSettings.DN_CLAIM;
 import static org.elasticsearch.xpack.core.security.authc.oidc.OpenIdConnectRealmSettings.GROUPS_CLAIM;
@@ -73,12 +71,14 @@ import static org.elasticsearch.xpack.core.security.authc.oidc.OpenIdConnectReal
 import static org.elasticsearch.xpack.core.security.authc.oidc.OpenIdConnectRealmSettings.OP_USERINFO_ENDPOINT;
 import static org.elasticsearch.xpack.core.security.authc.oidc.OpenIdConnectRealmSettings.POPULATE_USER_METADATA;
 import static org.elasticsearch.xpack.core.security.authc.oidc.OpenIdConnectRealmSettings.PRINCIPAL_CLAIM;
+import static org.elasticsearch.xpack.core.security.authc.oidc.OpenIdConnectRealmSettings.RP_CLIENT_AUTH_JWT_SIGNATURE_ALGORITHM;
+import static org.elasticsearch.xpack.core.security.authc.oidc.OpenIdConnectRealmSettings.RP_CLIENT_AUTH_METHOD;
 import static org.elasticsearch.xpack.core.security.authc.oidc.OpenIdConnectRealmSettings.RP_CLIENT_ID;
 import static org.elasticsearch.xpack.core.security.authc.oidc.OpenIdConnectRealmSettings.RP_CLIENT_SECRET;
 import static org.elasticsearch.xpack.core.security.authc.oidc.OpenIdConnectRealmSettings.RP_POST_LOGOUT_REDIRECT_URI;
 import static org.elasticsearch.xpack.core.security.authc.oidc.OpenIdConnectRealmSettings.RP_REDIRECT_URI;
-import static org.elasticsearch.xpack.core.security.authc.oidc.OpenIdConnectRealmSettings.RP_RESPONSE_TYPE;
 import static org.elasticsearch.xpack.core.security.authc.oidc.OpenIdConnectRealmSettings.RP_REQUESTED_SCOPES;
+import static org.elasticsearch.xpack.core.security.authc.oidc.OpenIdConnectRealmSettings.RP_RESPONSE_TYPE;
 import static org.elasticsearch.xpack.core.security.authc.oidc.OpenIdConnectRealmSettings.RP_SIGNATURE_ALGORITHM;
 
 public class OpenIdConnectRealm extends Realm implements Releasable {
@@ -97,8 +97,7 @@ public class OpenIdConnectRealm extends Realm implements Releasable {
 
     private DelegatedAuthorizationSupport delegatedRealms;
 
-    public OpenIdConnectRealm(RealmConfig config, SSLService sslService, UserRoleMapper roleMapper,
-                              ResourceWatcherService watcherService) {
+    public OpenIdConnectRealm(RealmConfig config, SSLService sslService, UserRoleMapper roleMapper, ResourceWatcherService watcherService) {
         super(config);
         this.roleMapper = roleMapper;
         this.rpConfiguration = buildRelyingPartyConfiguration(config);
@@ -110,11 +109,19 @@ public class OpenIdConnectRealm extends Realm implements Releasable {
         this.mailAttribute = ClaimParser.forSetting(logger, MAIL_CLAIM, config, false);
         this.populateUserMetadata = config.getSetting(POPULATE_USER_METADATA);
         if (TokenService.isTokenServiceEnabled(config.settings()) == false) {
-            throw new IllegalStateException("OpenID Connect Realm requires that the token service be enabled ("
-                + XPackSettings.TOKEN_SERVICE_ENABLED_SETTING.getKey() + ")");
+            throw new IllegalStateException(
+                "OpenID Connect Realm requires that the token service be enabled ("
+                    + XPackSettings.TOKEN_SERVICE_ENABLED_SETTING.getKey()
+                    + ")"
+            );
         }
-        this.openIdConnectAuthenticator =
-            new OpenIdConnectAuthenticator(config, opConfiguration, rpConfiguration, sslService, watcherService);
+        this.openIdConnectAuthenticator = new OpenIdConnectAuthenticator(
+            config,
+            opConfiguration,
+            rpConfiguration,
+            sslService,
+            watcherService
+        );
     }
 
     // For testing
@@ -145,27 +152,34 @@ public class OpenIdConnectRealm extends Realm implements Releasable {
         return token instanceof OpenIdConnectToken;
     }
 
+    private boolean isTokenForRealm(OpenIdConnectToken oidcToken) {
+        if (oidcToken.getAuthenticatingRealm() == null) {
+            return true;
+        } else {
+            return oidcToken.getAuthenticatingRealm().equals(this.name());
+        }
+    }
+
     @Override
     public AuthenticationToken token(ThreadContext context) {
         return null;
     }
 
     @Override
-    public void authenticate(AuthenticationToken token, ActionListener<AuthenticationResult> listener) {
-        if (token instanceof OpenIdConnectToken) {
+    public void authenticate(AuthenticationToken token, ActionListener<AuthenticationResult<User>> listener) {
+        if (token instanceof OpenIdConnectToken && isTokenForRealm((OpenIdConnectToken) token)) {
             OpenIdConnectToken oidcToken = (OpenIdConnectToken) token;
-            openIdConnectAuthenticator.authenticate(oidcToken, ActionListener.wrap(
-                jwtClaimsSet -> {
-                    buildUserFromClaims(jwtClaimsSet, listener);
-                },
-                e -> {
+            openIdConnectAuthenticator.authenticate(
+                oidcToken,
+                ActionListener.wrap(jwtClaimsSet -> { buildUserFromClaims(jwtClaimsSet, listener); }, e -> {
                     logger.debug("Failed to consume the OpenIdConnectToken ", e);
                     if (e instanceof ElasticsearchSecurityException) {
                         listener.onResponse(AuthenticationResult.unsuccessful("Failed to authenticate user with OpenID Connect", e));
                     } else {
                         listener.onFailure(e);
                     }
-                }));
+                })
+            );
         } else {
             listener.onResponse(AuthenticationResult.notHandled());
         }
@@ -176,23 +190,23 @@ public class OpenIdConnectRealm extends Realm implements Releasable {
         listener.onResponse(null);
     }
 
-
-    private void buildUserFromClaims(JWTClaimsSet claims, ActionListener<AuthenticationResult> authResultListener) {
+    private void buildUserFromClaims(JWTClaimsSet claims, ActionListener<AuthenticationResult<User>> authResultListener) {
         final String principal = principalAttribute.getClaimValue(claims);
         if (Strings.isNullOrEmpty(principal)) {
-            authResultListener.onResponse(AuthenticationResult.unsuccessful(
-                principalAttribute + "not found in " + claims.toJSONObject(), null));
+            authResultListener.onResponse(
+                AuthenticationResult.unsuccessful(principalAttribute + "not found in " + claims.toJSONObject(), null)
+            );
             return;
         }
 
         final Map<String, Object> tokenMetadata = new HashMap<>();
         tokenMetadata.put("id_token_hint", claims.getClaim("id_token_hint"));
-        ActionListener<AuthenticationResult> wrappedAuthResultListener = ActionListener.wrap(auth -> {
+        ActionListener<AuthenticationResult<User>> wrappedAuthResultListener = ActionListener.wrap(auth -> {
             if (auth.isAuthenticated()) {
                 // Add the ID Token as metadata on the authentication, so that it can be used for logout requests
                 Map<String, Object> metadata = new HashMap<>(auth.getMetadata());
                 metadata.put(CONTEXT_TOKEN_DATA, tokenMetadata);
-                auth = AuthenticationResult.success(auth.getUser(), metadata);
+                auth = AuthenticationResult.success(auth.getValue(), metadata);
             }
             authResultListener.onResponse(auth);
         }, authResultListener::onFailure);
@@ -202,19 +216,15 @@ public class OpenIdConnectRealm extends Realm implements Releasable {
             return;
         }
 
-        final Map<String, Object> userMetadata = new HashMap<>();
+        final Map<String, Object> userMetadata;
         if (populateUserMetadata) {
-            Map<String, Object> claimsMap = claims.getClaims();
-            /*
-             * We whitelist the Types that we want to parse as metadata from the Claims, explicitly filtering out {@link Date}s
-             */
-            Set<Map.Entry> allowedEntries = claimsMap.entrySet().stream().filter(entry -> {
-                Object v = entry.getValue();
-                return (v instanceof String || v instanceof Boolean || v instanceof Number || v instanceof Collections);
-            }).collect(Collectors.toSet());
-            for (Map.Entry entry : allowedEntries) {
-                userMetadata.put("oidc(" + entry.getKey() + ")", entry.getValue());
-            }
+            userMetadata = claims.getClaims()
+                .entrySet()
+                .stream()
+                .filter(entry -> isAllowedTypeForClaim(entry.getValue()))
+                .collect(Collectors.toUnmodifiableMap(entry -> "oidc(" + entry.getKey() + ")", Map.Entry::getValue));
+        } else {
+            userMetadata = Map.of();
         }
         final List<String> groups = groupsAttribute.getClaimValues(claims);
         final String dn = dnAttribute.getClaimValue(claims);
@@ -247,11 +257,16 @@ public class OpenIdConnectRealm extends Realm implements Releasable {
         }
         final ClientID clientId = new ClientID(require(config, RP_CLIENT_ID));
         final SecureString clientSecret = config.getSetting(RP_CLIENT_SECRET);
+        if (clientSecret.length() == 0) {
+            throw new SettingsException(
+                "The configuration setting [" + RealmSettings.getFullSettingKey(config, RP_CLIENT_SECRET) + "] is required"
+            );
+        }
         final ResponseType responseType;
         try {
-            // This should never happen as it's already validated in the settings
             responseType = ResponseType.parse(require(config, RP_RESPONSE_TYPE));
         } catch (ParseException e) {
+            // This should never happen as it's already validated in the settings
             throw new SettingsException("Invalid value for " + RP_RESPONSE_TYPE.getKey(), e);
         }
 
@@ -260,9 +275,21 @@ public class OpenIdConnectRealm extends Realm implements Releasable {
             requestedScope.add("openid");
         }
         final JWSAlgorithm signatureAlgorithm = JWSAlgorithm.parse(require(config, RP_SIGNATURE_ALGORITHM));
-
-        return new RelyingPartyConfiguration(clientId, clientSecret, redirectUri, responseType, requestedScope,
-            signatureAlgorithm, postLogoutRedirectUri);
+        final ClientAuthenticationMethod clientAuthenticationMethod = ClientAuthenticationMethod.parse(
+            require(config, RP_CLIENT_AUTH_METHOD)
+        );
+        final JWSAlgorithm clientAuthJwtAlgorithm = JWSAlgorithm.parse(require(config, RP_CLIENT_AUTH_JWT_SIGNATURE_ALGORITHM));
+        return new RelyingPartyConfiguration(
+            clientId,
+            clientSecret,
+            redirectUri,
+            responseType,
+            requestedScope,
+            signatureAlgorithm,
+            clientAuthenticationMethod,
+            clientAuthJwtAlgorithm,
+            postLogoutRedirectUri
+        );
     }
 
     private OpenIdConnectProviderConfiguration buildOpenIdConnectProviderConfiguration(RealmConfig config) {
@@ -277,39 +304,57 @@ public class OpenIdConnectRealm extends Realm implements Releasable {
             // This should never happen as it's already validated in the settings
             throw new SettingsException("Invalid URI: " + OP_AUTHORIZATION_ENDPOINT.getKey(), e);
         }
+        String responseType = require(config, RP_RESPONSE_TYPE);
+        String tokenEndpointString = config.getSetting(OP_TOKEN_ENDPOINT);
+        if (responseType.equals("code") && tokenEndpointString.isEmpty()) {
+            throw new SettingsException(
+                "The configuration setting ["
+                    + OP_TOKEN_ENDPOINT.getConcreteSettingForNamespace(name()).getKey()
+                    + "] is required when ["
+                    + RP_RESPONSE_TYPE.getConcreteSettingForNamespace(name()).getKey()
+                    + "] is set to \"code\""
+            );
+        }
         URI tokenEndpoint;
         try {
-            tokenEndpoint = new URI(require(config, OP_TOKEN_ENDPOINT));
+            tokenEndpoint = tokenEndpointString.isEmpty() ? null : new URI(tokenEndpointString);
         } catch (URISyntaxException e) {
             // This should never happen as it's already validated in the settings
             throw new SettingsException("Invalid URL: " + OP_TOKEN_ENDPOINT.getKey(), e);
         }
         URI userinfoEndpoint;
         try {
-            userinfoEndpoint = (config.getSetting(OP_USERINFO_ENDPOINT, () -> null) == null) ? null :
-                new URI(config.getSetting(OP_USERINFO_ENDPOINT, () -> null));
+            userinfoEndpoint = (config.getSetting(OP_USERINFO_ENDPOINT).isEmpty())
+                ? null
+                : new URI(config.getSetting(OP_USERINFO_ENDPOINT));
         } catch (URISyntaxException e) {
             // This should never happen as it's already validated in the settings
             throw new SettingsException("Invalid URI: " + OP_USERINFO_ENDPOINT.getKey(), e);
         }
         URI endsessionEndpoint;
         try {
-            endsessionEndpoint = (config.getSetting(OP_ENDSESSION_ENDPOINT, () -> null) == null) ? null :
-                new URI(config.getSetting(OP_ENDSESSION_ENDPOINT, () -> null));
+            endsessionEndpoint = (config.getSetting(OP_ENDSESSION_ENDPOINT).isEmpty())
+                ? null
+                : new URI(config.getSetting(OP_ENDSESSION_ENDPOINT));
         } catch (URISyntaxException e) {
             // This should never happen as it's already validated in the settings
             throw new SettingsException("Invalid URI: " + OP_ENDSESSION_ENDPOINT.getKey(), e);
         }
 
-        return new OpenIdConnectProviderConfiguration(issuer, jwkSetUrl, authorizationEndpoint, tokenEndpoint,
-            userinfoEndpoint, endsessionEndpoint);
+        return new OpenIdConnectProviderConfiguration(
+            issuer,
+            jwkSetUrl,
+            authorizationEndpoint,
+            tokenEndpoint,
+            userinfoEndpoint,
+            endsessionEndpoint
+        );
     }
 
     private static String require(RealmConfig config, Setting.AffixSetting<String> setting) {
         final String value = config.getSetting(setting);
         if (value.isEmpty()) {
-            throw new SettingsException("The configuration setting [" + RealmSettings.getFullSettingKey(config, setting)
-                + "] is required");
+            throw new SettingsException("The configuration setting [" + RealmSettings.getFullSettingKey(config, setting) + "] is required");
         }
         return value;
     }
@@ -332,23 +377,28 @@ public class OpenIdConnectRealm extends Realm implements Releasable {
      *
      * @return an {@link OpenIdConnectPrepareAuthenticationResponse}
      */
-    public OpenIdConnectPrepareAuthenticationResponse buildAuthenticationRequestUri(@Nullable String existingState,
-                                                                                    @Nullable String existingNonce,
-                                                                                    @Nullable String loginHint) {
+    public OpenIdConnectPrepareAuthenticationResponse buildAuthenticationRequestUri(
+        @Nullable String existingState,
+        @Nullable String existingNonce,
+        @Nullable String loginHint
+    ) {
         final State state = existingState != null ? new State(existingState) : new State();
         final Nonce nonce = existingNonce != null ? new Nonce(existingNonce) : new Nonce();
-        final AuthenticationRequest.Builder builder = new AuthenticationRequest.Builder(rpConfiguration.getResponseType(),
+        final AuthenticationRequest.Builder builder = new AuthenticationRequest.Builder(
+            rpConfiguration.getResponseType(),
             rpConfiguration.getRequestedScope(),
             rpConfiguration.getClientId(),
-            rpConfiguration.getRedirectUri())
-            .endpointURI(opConfiguration.getAuthorizationEndpoint())
-            .state(state)
-            .nonce(nonce);
+            rpConfiguration.getRedirectUri()
+        ).endpointURI(opConfiguration.getAuthorizationEndpoint()).state(state).nonce(nonce);
         if (Strings.hasText(loginHint)) {
             builder.loginHint(loginHint);
         }
-        return new OpenIdConnectPrepareAuthenticationResponse(builder.build().toURI().toString(),
-            state.getValue(), nonce.getValue());
+        return new OpenIdConnectPrepareAuthenticationResponse(
+            builder.build().toURI().toString(),
+            state.getValue(),
+            nonce.getValue(),
+            this.name()
+        );
     }
 
     public boolean isIssuerValid(String issuer) {
@@ -358,8 +408,12 @@ public class OpenIdConnectRealm extends Realm implements Releasable {
     public OpenIdConnectLogoutResponse buildLogoutResponse(JWT idTokenHint) {
         if (opConfiguration.getEndsessionEndpoint() != null) {
             final State state = new State();
-            final LogoutRequest logoutRequest = new LogoutRequest(opConfiguration.getEndsessionEndpoint(), idTokenHint,
-                rpConfiguration.getPostLogoutRedirectUri(), state);
+            final LogoutRequest logoutRequest = new LogoutRequest(
+                opConfiguration.getEndsessionEndpoint(),
+                idTokenHint,
+                rpConfiguration.getPostLogoutRedirectUri(),
+                state
+            );
             return new OpenIdConnectLogoutResponse(logoutRequest.toURI().toString());
         } else {
             return new OpenIdConnectLogoutResponse((String) null);
@@ -369,6 +423,17 @@ public class OpenIdConnectRealm extends Realm implements Releasable {
     @Override
     public void close() {
         openIdConnectAuthenticator.close();
+    }
+
+    /*
+     * We only map claims that are of Type String, Boolean, or Number, or arrays that contain only these types
+     */
+    private static boolean isAllowedTypeForClaim(Object o) {
+        return (o instanceof String
+            || o instanceof Boolean
+            || o instanceof Number
+            || (o instanceof Collection
+                && ((Collection<?>) o).stream().allMatch(c -> c instanceof String || c instanceof Boolean || c instanceof Number)));
     }
 
     static final class ClaimParser {
@@ -398,73 +463,100 @@ public class OpenIdConnectRealm extends Realm implements Releasable {
             return name;
         }
 
-        static ClaimParser forSetting(Logger logger, OpenIdConnectRealmSettings.ClaimSetting setting, RealmConfig realmConfig,
-                                      boolean required) {
+        @SuppressWarnings("unchecked")
+        private static Collection<String> parseClaimValues(JWTClaimsSet claimsSet, String claimName, String settingKey) {
+            Collection<String> values;
+            final Object claimValueObject = claimsSet.getClaim(claimName);
+            if (claimValueObject == null) {
+                values = List.of();
+            } else if (claimValueObject instanceof String) {
+                values = List.of((String) claimValueObject);
+            } else if (claimValueObject instanceof Collection
+                && ((Collection<?>) claimValueObject).stream().allMatch(c -> c instanceof String)) {
+                    values = (Collection<String>) claimValueObject;
+                } else {
+                    throw new SettingsException("Setting [ " + settingKey + " expects a claim with String or a String Array value");
+                }
+            return values;
+        }
+
+        static ClaimParser forSetting(
+            Logger logger,
+            OpenIdConnectRealmSettings.ClaimSetting setting,
+            RealmConfig realmConfig,
+            boolean required
+        ) {
 
             if (realmConfig.hasSetting(setting.getClaim())) {
                 String claimName = realmConfig.getSetting(setting.getClaim());
                 if (realmConfig.hasSetting(setting.getPattern())) {
                     Pattern regex = Pattern.compile(realmConfig.getSetting(setting.getPattern()));
                     return new ClaimParser(
-                        "OpenID Connect Claim [" + claimName + "] with pattern [" + regex.pattern() + "] for ["
-                            + setting.name(realmConfig) + "]",
+                        "OpenID Connect Claim ["
+                            + claimName
+                            + "] with pattern ["
+                            + regex.pattern()
+                            + "] for ["
+                            + setting.name(realmConfig)
+                            + "]",
                         claims -> {
-                            Object claimValueObject = claims.getClaim(claimName);
-                            List<String> values;
-                            if (claimValueObject == null) {
-                                values = Collections.emptyList();
-                            } else if (claimValueObject instanceof String) {
-                                values = Collections.singletonList((String) claimValueObject);
-                            } else if (claimValueObject instanceof List) {
-                                values = (List<String>) claimValueObject;
-                            } else {
-                                throw new SettingsException("Setting [" + RealmSettings.getFullSettingKey(realmConfig, setting.getClaim())
-                                    + " expects a claim with String or a String Array value but found a "
-                                    + claimValueObject.getClass().getName());
-                            }
+                            Collection<String> values = parseClaimValues(
+                                claims,
+                                claimName,
+                                RealmSettings.getFullSettingKey(realmConfig, setting.getClaim())
+                            );
                             return values.stream().map(s -> {
+                                if (s == null) {
+                                    logger.debug("OpenID Connect Claim [{}] is null", claimName);
+                                    return null;
+                                }
                                 final Matcher matcher = regex.matcher(s);
                                 if (matcher.find() == false) {
-                                    logger.debug("OpenID Connect Claim [{}] is [{}], which does not match [{}]",
-                                        claimName, s, regex.pattern());
+                                    logger.debug(
+                                        "OpenID Connect Claim [{}] is [{}], which does not match [{}]",
+                                        claimName,
+                                        s,
+                                        regex.pattern()
+                                    );
                                     return null;
                                 }
                                 final String value = matcher.group(1);
                                 if (Strings.isNullOrEmpty(value)) {
-                                    logger.debug("OpenID Connect Claim [{}] is [{}], which does match [{}] but group(1) is empty",
-                                        claimName, s, regex.pattern());
+                                    logger.debug(
+                                        "OpenID Connect Claim [{}] is [{}], which does match [{}] but group(1) is empty",
+                                        claimName,
+                                        s,
+                                        regex.pattern()
+                                    );
                                     return null;
                                 }
                                 return value;
-                            }).filter(Objects::nonNull).collect(Collectors.toList());
-                        });
+                            }).filter(Objects::nonNull).collect(Collectors.toUnmodifiableList());
+                        }
+                    );
                 } else {
                     return new ClaimParser(
                         "OpenID Connect Claim [" + claimName + "] for [" + setting.name(realmConfig) + "]",
-                        claims -> {
-                            Object claimValueObject = claims.getClaim(claimName);
-                            if (claimValueObject == null) {
-                                return Collections.emptyList();
-                            } else if (claimValueObject instanceof String) {
-                                return Collections.singletonList((String) claimValueObject);
-                            } else if (claimValueObject instanceof List == false) {
-                                throw new SettingsException("Setting [" + RealmSettings.getFullSettingKey(realmConfig, setting.getClaim())
-                                    + " expects a claim with String or a String Array value but found a "
-                                    + claimValueObject.getClass().getName());
-                            }
-                            return (List<String>) claimValueObject;
-                        });
+                        claims -> parseClaimValues(claims, claimName, RealmSettings.getFullSettingKey(realmConfig, setting.getClaim()))
+                            .stream()
+                            .filter(Objects::nonNull)
+                            .collect(Collectors.toUnmodifiableList())
+                    );
                 }
             } else if (required) {
-                throw new SettingsException("Setting [" + RealmSettings.getFullSettingKey(realmConfig, setting.getClaim())
-                    + "] is required");
+                throw new SettingsException(
+                    "Setting [" + RealmSettings.getFullSettingKey(realmConfig, setting.getClaim()) + "] is required"
+                );
             } else if (realmConfig.hasSetting(setting.getPattern())) {
-                throw new SettingsException("Setting [" + RealmSettings.getFullSettingKey(realmConfig, setting.getPattern())
-                    + "] cannot be set unless [" + RealmSettings.getFullSettingKey(realmConfig, setting.getClaim())
-                    + "] is also set");
+                throw new SettingsException(
+                    "Setting ["
+                        + RealmSettings.getFullSettingKey(realmConfig, setting.getPattern())
+                        + "] cannot be set unless ["
+                        + RealmSettings.getFullSettingKey(realmConfig, setting.getClaim())
+                        + "] is also set"
+                );
             } else {
-                return new ClaimParser("No OpenID Connect Claim for [" + setting.name(realmConfig) + "]",
-                    attributes -> Collections.emptyList());
+                return new ClaimParser("No OpenID Connect Claim for [" + setting.name(realmConfig) + "]", attributes -> List.of());
             }
         }
     }
