@@ -1,7 +1,8 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.security.authc.support.mapper;
 
@@ -17,23 +18,24 @@ import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
-import org.elasticsearch.common.xcontent.DeprecationHandler;
-import org.elasticsearch.common.xcontent.NamedXContentRegistry;
-import org.elasticsearch.common.xcontent.ToXContent;
-import org.elasticsearch.common.xcontent.XContentFactory;
-import org.elasticsearch.common.xcontent.XContentParser;
-import org.elasticsearch.common.xcontent.XContentType;
 import org.elasticsearch.env.Environment;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.VersionUtils;
+import org.elasticsearch.xcontent.DeprecationHandler;
+import org.elasticsearch.xcontent.NamedXContentRegistry;
+import org.elasticsearch.xcontent.ToXContent;
+import org.elasticsearch.xcontent.XContentFactory;
+import org.elasticsearch.xcontent.XContentParser;
+import org.elasticsearch.xcontent.XContentType;
 import org.elasticsearch.xpack.core.XPackClientPlugin;
 import org.elasticsearch.xpack.core.security.authc.RealmConfig;
+import org.elasticsearch.xpack.core.security.authc.RealmSettings;
+import org.elasticsearch.xpack.core.security.authc.support.UserRoleMapper;
 import org.elasticsearch.xpack.core.security.authc.support.mapper.ExpressionRoleMapping;
 import org.elasticsearch.xpack.core.security.authc.support.mapper.TemplateRoleName;
 import org.elasticsearch.xpack.core.security.authc.support.mapper.expressiondsl.AllExpression;
 import org.elasticsearch.xpack.core.security.authc.support.mapper.expressiondsl.AnyExpression;
 import org.elasticsearch.xpack.core.security.authc.support.mapper.expressiondsl.FieldExpression;
-import org.elasticsearch.xpack.security.authc.support.UserRoleMapper;
 import org.hamcrest.Matchers;
 import org.junit.Before;
 import org.mockito.Mockito;
@@ -43,6 +45,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
@@ -56,8 +59,13 @@ public class ExpressionRoleMappingTests extends ESTestCase {
 
     @Before
     public void setupMapping() throws Exception {
-        realm = new RealmConfig(new RealmConfig.RealmIdentifier("ldap", "ldap1"),
-            Settings.EMPTY, Mockito.mock(Environment.class), new ThreadContext(Settings.EMPTY));
+        RealmConfig.RealmIdentifier realmIdentifier = new RealmConfig.RealmIdentifier("ldap", "ldap1");
+        realm = new RealmConfig(
+            realmIdentifier,
+            Settings.builder().put(RealmSettings.getFullSettingKey(realmIdentifier, RealmSettings.ORDER_SETTING), 0).build(),
+            Mockito.mock(Environment.class),
+            new ThreadContext(Settings.EMPTY)
+        );
     }
 
     public void testValidExpressionWithFixedRoleNames() throws Exception {
@@ -75,31 +83,50 @@ public class ExpressionRoleMappingTests extends ESTestCase {
         assertThat(mapping.getExpression(), instanceOf(AllExpression.class));
 
         final UserRoleMapper.UserData user1a = new UserRoleMapper.UserData(
-            "john.smith", "cn=john.smith,ou=sales,dc=example,dc=com",
-            Collections.emptyList(), Collections.singletonMap("active", true), realm
+            "john.smith",
+            "cn=john.smith,ou=sales,dc=example,dc=com",
+            List.of(),
+            Map.of("active", true),
+            realm
         );
         final UserRoleMapper.UserData user1b = new UserRoleMapper.UserData(
-            user1a.getUsername(), user1a.getDn().toUpperCase(Locale.US), user1a.getGroups(), user1a.getMetadata(), user1a.getRealm()
+            user1a.getUsername(),
+            user1a.getDn().toUpperCase(Locale.US),
+            user1a.getGroups(),
+            user1a.getMetadata(),
+            user1a.getRealm()
         );
         final UserRoleMapper.UserData user1c = new UserRoleMapper.UserData(
-            user1a.getUsername(), user1a.getDn().replaceAll(",", ", "), user1a.getGroups(), user1a.getMetadata(), user1a.getRealm()
+            user1a.getUsername(),
+            user1a.getDn().replaceAll(",", ", "),
+            user1a.getGroups(),
+            user1a.getMetadata(),
+            user1a.getRealm()
         );
         final UserRoleMapper.UserData user1d = new UserRoleMapper.UserData(
-            user1a.getUsername(), user1a.getDn().replaceAll("dc=", "DC="), user1a.getGroups(), user1a.getMetadata(), user1a.getRealm()
+            user1a.getUsername(),
+            user1a.getDn().replaceAll("dc=", "DC="),
+            user1a.getGroups(),
+            user1a.getMetadata(),
+            user1a.getRealm()
         );
         final UserRoleMapper.UserData user2 = new UserRoleMapper.UserData(
-            "jamie.perez", "cn=jamie.perez,ou=sales,dc=example,dc=com",
-            Collections.emptyList(), Collections.singletonMap("active", false), realm
+            "jamie.perez",
+            "cn=jamie.perez,ou=sales,dc=example,dc=com",
+            List.of(),
+            Map.of("active", false),
+            realm
         );
 
         final UserRoleMapper.UserData user3 = new UserRoleMapper.UserData(
-            "simone.ng", "cn=simone.ng,ou=finance,dc=example,dc=com",
-            Collections.emptyList(), Collections.singletonMap("active", true), realm
+            "simone.ng",
+            "cn=simone.ng,ou=finance,dc=example,dc=com",
+            List.of(),
+            Map.of("active", true),
+            realm
         );
 
-        final UserRoleMapper.UserData user4 = new UserRoleMapper.UserData(
-                "peter.null", null, Collections.emptyList(), Collections.singletonMap("active", true), realm
-        );
+        final UserRoleMapper.UserData user4 = new UserRoleMapper.UserData("peter.null", null, List.of(), Map.of("active", true), realm);
 
         assertThat(mapping.getExpression().match(user1a.asModel()), equalTo(true));
         assertThat(mapping.getExpression().match(user1b.asModel()), equalTo(true));
@@ -111,34 +138,42 @@ public class ExpressionRoleMappingTests extends ESTestCase {
 
         // expression without dn
         json = "{"
-                + "\"roles\": [  \"superuser\", \"system_admin\", \"admin\" ], "
-                + "\"enabled\": true, "
-                + "\"rules\": { "
-                + "  \"any\": [ "
-                + "    { \"field\": { \"username\" : \"tony.stark\" } }, "
-                + "    { \"field\": { \"groups\": \"cn=admins,dc=stark-enterprises,dc=com\" } }"
-                + "  ]}"
-                + "}";
+            + "\"roles\": [  \"superuser\", \"system_admin\", \"admin\" ], "
+            + "\"enabled\": true, "
+            + "\"rules\": { "
+            + "  \"any\": [ "
+            + "    { \"field\": { \"username\" : \"tony.stark\" } }, "
+            + "    { \"field\": { \"groups\": \"cn=admins,dc=stark-enterprises,dc=com\" } }"
+            + "  ]}"
+            + "}";
         mapping = parse(json, "stark_admin");
-            assertThat(mapping.getRoles(), Matchers.containsInAnyOrder("superuser", "system_admin", "admin"));
-            assertThat(mapping.getExpression(), instanceOf(AnyExpression.class));
+        assertThat(mapping.getRoles(), Matchers.containsInAnyOrder("superuser", "system_admin", "admin"));
+        assertThat(mapping.getExpression(), instanceOf(AnyExpression.class));
 
         final UserRoleMapper.UserData userTony = new UserRoleMapper.UserData(
-                "tony.stark", null, Collections.singletonList("Audi R8 owners"), Collections.singletonMap("boss", true), realm
+            "tony.stark",
+            null,
+            List.of("Audi R8 owners"),
+            Map.of("boss", true),
+            realm
         );
         final UserRoleMapper.UserData userPepper = new UserRoleMapper.UserData(
-                "pepper.potts", null, Arrays.asList("marvel", "cn=admins,dc=stark-enterprises,dc=com"), null, realm
+            "pepper.potts",
+            null,
+            List.of("marvel", "cn=admins,dc=stark-enterprises,dc=com"),
+            Map.of(),
+            realm
         );
         final UserRoleMapper.UserData userMax = new UserRoleMapper.UserData(
-                "max.rockatansky", null, Collections.singletonList("bronze"), Collections.singletonMap("mad", true), realm
-        );
-        final UserRoleMapper.UserData userFinn = new UserRoleMapper.UserData(
-                "finn.hackleberry", null, Arrays.asList("hacker", null), null, realm
+            "max.rockatansky",
+            null,
+            List.of("bronze"),
+            Map.of("mad", true),
+            realm
         );
         assertThat(mapping.getExpression().match(userTony.asModel()), equalTo(true));
         assertThat(mapping.getExpression().match(userPepper.asModel()), equalTo(true));
         assertThat(mapping.getExpression().match(userMax.asModel()), equalTo(false));
-        assertThat(mapping.getExpression().match(userFinn.asModel()), equalTo(false));
     }
 
     public void testParseValidJsonWithTemplatedRoleNames() throws Exception {
@@ -166,10 +201,7 @@ public class ExpressionRoleMappingTests extends ESTestCase {
     }
 
     public void testParsingFailsIfRulesAreMissing() throws Exception {
-        String json = "{"
-            + "\"roles\": [  \"kibana_user\", \"sales\" ], "
-            + "\"enabled\": true "
-            + "}";
+        String json = "{" + "\"roles\": [  \"kibana_user\", \"sales\" ], " + "\"enabled\": true " + "}";
         ParsingException ex = expectThrows(ParsingException.class, () -> parse(json, "bad_json"));
         assertThat(ex.getMessage(), containsString("rules"));
     }
@@ -239,17 +271,20 @@ public class ExpressionRoleMappingTests extends ESTestCase {
         assertThat(mapping.getRoles(), iterableWithSize(2));
 
         final String xcontent = Strings.toString(mapping);
-        assertThat(xcontent, equalTo(
-            "{"
-                + "\"enabled\":true,"
-                + "\"roles\":["
-                + "\"kibana_user\","
-                + "\"sales\""
-                + "],"
-                + "\"rules\":{\"field\":{\"realm.name\":\"saml1\"}},"
-                + "\"metadata\":{}"
-                + "}"
-        ));
+        assertThat(
+            xcontent,
+            equalTo(
+                "{"
+                    + "\"enabled\":true,"
+                    + "\"roles\":["
+                    + "\"kibana_user\","
+                    + "\"sales\""
+                    + "],"
+                    + "\"rules\":{\"field\":{\"realm.name\":\"saml1\"}},"
+                    + "\"metadata\":{}"
+                    + "}"
+            )
+        );
     }
 
     public void testToXContentWithTemplates() throws Exception {
@@ -266,18 +301,21 @@ public class ExpressionRoleMappingTests extends ESTestCase {
         assertThat(mapping.getRoleTemplates(), iterableWithSize(2));
 
         final String xcontent = Strings.toString(mapping.toXContent(XContentFactory.jsonBuilder(), ToXContent.EMPTY_PARAMS, true));
-        assertThat(xcontent, equalTo(
-            "{"
-                + "\"enabled\":false,"
-                + "\"role_templates\":["
-                + "{\"template\":\"{\\\"source\\\":\\\"_user_{{username}}\\\"}\",\"format\":\"string\"},"
-                + "{\"template\":\"{\\\"source\\\":\\\"{{#tojson}}groups{{/tojson}}\\\"}\",\"format\":\"json\"}"
-                + "],"
-                + "\"rules\":{\"field\":{\"realm.name\":\"saml1\"}},"
-                + "\"metadata\":{\"answer\":42},"
-                + "\"doc_type\":\"role-mapping\""
-                + "}"
-        ));
+        assertThat(
+            xcontent,
+            equalTo(
+                "{"
+                    + "\"enabled\":false,"
+                    + "\"role_templates\":["
+                    + "{\"template\":\"{\\\"source\\\":\\\"_user_{{username}}\\\"}\",\"format\":\"string\"},"
+                    + "{\"template\":\"{\\\"source\\\":\\\"{{#tojson}}groups{{/tojson}}\\\"}\",\"format\":\"json\"}"
+                    + "],"
+                    + "\"rules\":{\"field\":{\"realm.name\":\"saml1\"}},"
+                    + "\"metadata\":{\"answer\":42},"
+                    + "\"doc_type\":\"role-mapping\""
+                    + "}"
+            )
+        );
 
         final ExpressionRoleMapping parsed = parse(xcontent, getTestName(), true);
         assertThat(parsed.getRoles(), iterableWithSize(0));
@@ -294,8 +332,10 @@ public class ExpressionRoleMappingTests extends ESTestCase {
         original.writeTo(output);
 
         final NamedWriteableRegistry registry = new NamedWriteableRegistry(new XPackClientPlugin(Settings.EMPTY).getNamedWriteables());
-        StreamInput streamInput = new NamedWriteableAwareStreamInput(ByteBufferStreamInput.wrap(BytesReference.toBytes(output.bytes())),
-            registry);
+        StreamInput streamInput = new NamedWriteableAwareStreamInput(
+            ByteBufferStreamInput.wrap(BytesReference.toBytes(output.bytes())),
+            registry
+        );
         streamInput.setVersion(version);
         final ExpressionRoleMapping serialized = new ExpressionRoleMapping(streamInput);
         assertEquals(original, serialized);
@@ -304,14 +344,16 @@ public class ExpressionRoleMappingTests extends ESTestCase {
     public void testSerializationPreV71() throws Exception {
         final ExpressionRoleMapping original = randomRoleMapping(false);
 
-        final Version version = VersionUtils.randomVersionBetween(random(), Version.V_7_0_0, Version.V_7_0_2);
+        final Version version = VersionUtils.randomVersionBetween(random(), Version.V_7_0_0, Version.V_7_0_1);
         BytesStreamOutput output = new BytesStreamOutput();
         output.setVersion(version);
         original.writeTo(output);
 
         final NamedWriteableRegistry registry = new NamedWriteableRegistry(new XPackClientPlugin(Settings.EMPTY).getNamedWriteables());
-        StreamInput streamInput = new NamedWriteableAwareStreamInput(ByteBufferStreamInput.wrap(BytesReference.toBytes(output.bytes())),
-            registry);
+        StreamInput streamInput = new NamedWriteableAwareStreamInput(
+            ByteBufferStreamInput.wrap(BytesReference.toBytes(output.bytes())),
+            registry
+        );
         streamInput.setVersion(version);
         final ExpressionRoleMapping serialized = new ExpressionRoleMapping(streamInput);
         assertEquals(original, serialized);
@@ -337,17 +379,27 @@ public class ExpressionRoleMappingTests extends ESTestCase {
         final List<TemplateRoleName> templates;
         if (useTemplate) {
             roles = Collections.emptyList();
-            templates = Arrays.asList(randomArray(1, 5, TemplateRoleName[]::new, () ->
-                new TemplateRoleName(new BytesArray(randomAlphaOfLengthBetween(10, 25)), randomFrom(TemplateRoleName.Format.values()))
-            ));
+            templates = Arrays.asList(
+                randomArray(
+                    1,
+                    5,
+                    TemplateRoleName[]::new,
+                    () -> new TemplateRoleName(
+                        new BytesArray(randomAlphaOfLengthBetween(10, 25)),
+                        randomFrom(TemplateRoleName.Format.values())
+                    )
+                )
+            );
         } else {
             roles = Arrays.asList(randomArray(1, 5, String[]::new, () -> randomAlphaOfLengthBetween(4, 12)));
             templates = Collections.emptyList();
         }
         return new ExpressionRoleMapping(
             randomAlphaOfLengthBetween(3, 8),
-            new FieldExpression(randomAlphaOfLengthBetween(4, 12),
-                Collections.singletonList(new FieldExpression.FieldValue(randomInt(99)))),
+            new FieldExpression(
+                randomAlphaOfLengthBetween(4, 12),
+                Collections.singletonList(new FieldExpression.FieldValue(randomInt(99)))
+            ),
             roles,
             templates,
             Collections.singletonMap(randomAlphaOfLengthBetween(3, 12), randomIntBetween(30, 90)),
